Add support for JDK12